Auth & Button added

--- a/public/index.html
+++ b/public/index.html
@@ -12,22 +12,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha256-m/h/cUDAhf6/iBRixTbuc8+Rg2cIETQtPcH9D3p2Kg0=" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
     <link href="main.css" rel="stylesheet">
-    <title>Google SignIn</title>
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <meta name="google-signin-client_id" content="611136410591-tfahqplro7op045tkh3pbf1fb0dk6q9o.apps.googleusercontent.com">
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src = "login.js"></script>
-    <style>
-      .g-signin2 {
-        margin-left:500px;
-        margin-top: 200px;
-      }
-    </style>
+    <script src="https://apis.google.com/js/api:client.js" async defer></script>
+
   </head>
   <body>
-    <div class="g-signin2" data-onsuccess="onSignIn"></div>
       <div class="site-wrapper">
         <div class="site-wrapper-inner">
           <div class="cover-container">
