added live updates to density map

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 
             <div class="mastfoot">
               <div class="inner">
-                <p>All content is Copyright © 2017 <a href="http://sse.rit.edu">Society of Software Engineers</a>.</p>
+                <!-- <p>All content is Copyright © 2017 <a href="http://sse.rit.edu">Society of Software Engineers</a>.</p> -->
               </div>
             </div>
           </div>
